tests/negative/oop/static_member_access.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that static members cannot be accessed via instances and instance members cannot be accessed via class name.

class Config {
    static version: string = "1.0";
    name: string = "Nova";
}

function main() {
    let c = new Config();
    print(c.version); // Error: version is static
    print(Config.name); // Error: name is an instance property
}
